--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,11 +72,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_alarm"
-            dividerColor="@{@color/gray_400}"
-            dividerHeight="@{5f}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
+            android:background="@color/white"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
