--- a/app/src/main/res/layout/recycler_date.xml
+++ b/app/src/main/res/layout/recycler_date.xml
@@ -25,68 +25,81 @@
             type="Boolean" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_alarm_height"
-        android:elevation="15dp">
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp">
 
-        <TextView
-            android:id="@+id/tv_alarm_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:text="@{title}"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_meridiem"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center_horizontal"
-            android:text="@{meridiem}"
-            app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.15" />
+            <TextView
+                android:id="@+id/tv_alarm_title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:text="@{title}"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintHeight_percent="0.35"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:text="@{time}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.25" />
+            <TextView
+                android:id="@+id/tv_meridiem"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center_horizontal"
+                android:text="@{meridiem}"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHeight_percent="0.3"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.15" />
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{date}"
-            android:gravity="end"
-            app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_time"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.45" />
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:text="@{time}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.25" />
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_alarm_state"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:checked="@{onOff}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_date"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title" />
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="@{date}"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_time"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.45" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_alarm_state"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:checked="@{onOff}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_date"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
