--- a/app/src/main/res/layout/recycler_days.xml
+++ b/app/src/main/res/layout/recycler_days.xml
@@ -27,172 +27,182 @@
             type="Boolean" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/item_alarm_height">
-
-        <TextView
-            android:id="@+id/tv_alarm_title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:text="@{title}"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_meridiem"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center_horizontal"
-            android:text="@{meridiem}"
-            app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.15" />
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:text="@{time}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.25" />
+        android:layout_height="@dimen/item_alarm_height"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/const_date"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_time"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-            app:layout_constraintWidth_percent="0.45">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tv_sunday"
-                draw="@={days[0]}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/sunday"
-                android:textColor="@color/red"
+                android:id="@+id/tv_alarm_title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:text="@{title}"
+                android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintHeight_percent="0.35"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_meridiem"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="center_horizontal"
+                android:text="@{meridiem}"
+                app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintHeight_percent="0.3"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_monday"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.15" />
 
             <TextView
-                android:id="@+id/tv_monday"
-                draw="@={days[1]}"
+                android:id="@+id/tv_time"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/monday"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:text="@{time}"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_sunday"
-                app:layout_constraintRight_toLeftOf="@id/tv_tuesday"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.25" />
 
-            <TextView
-                android:id="@+id/tv_tuesday"
-                draw="@={days[2]}"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/const_date"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/tuesday"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_monday"
-                app:layout_constraintRight_toLeftOf="@id/tv_wednesday"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintLeft_toRightOf="@id/tv_time"
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
+                app:layout_constraintWidth_percent="0.45">
 
-            <TextView
-                android:id="@+id/tv_wednesday"
-                draw="@={days[3]}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/wednesday"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
-                app:layout_constraintRight_toLeftOf="@id/tv_thursday"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tv_sunday"
+                    draw="@={days[0]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/sunday"
+                    android:textColor="@color/red"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_monday"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_thursday"
-                draw="@={days[4]}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/thursday"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
-                app:layout_constraintRight_toLeftOf="@id/tv_friday"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tv_monday"
+                    draw="@={days[1]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/monday"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_sunday"
+                    app:layout_constraintRight_toLeftOf="@id/tv_tuesday"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_friday"
-                draw="@={days[5]}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/friday"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_thursday"
-                app:layout_constraintRight_toLeftOf="@id/tv_saturday"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tv_tuesday"
+                    draw="@={days[2]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/tuesday"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_monday"
+                    app:layout_constraintRight_toLeftOf="@id/tv_wednesday"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_saturday"
-                draw="@={days[6]}"
+                <TextView
+                    android:id="@+id/tv_wednesday"
+                    draw="@={days[3]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/wednesday"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
+                    app:layout_constraintRight_toLeftOf="@id/tv_thursday"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_thursday"
+                    draw="@={days[4]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/thursday"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
+                    app:layout_constraintRight_toLeftOf="@id/tv_friday"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_friday"
+                    draw="@={days[5]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/friday"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_thursday"
+                    app:layout_constraintRight_toLeftOf="@id/tv_saturday"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_saturday"
+                    draw="@={days[6]}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/saturday"
+                    android:textColor="@color/blue"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintLeft_toRightOf="@id/tv_friday"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_alarm_state"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/saturday"
-                android:textColor="@color/blue"
-                android:textStyle="bold"
+                android:layout_height="0dp"
+                android:checked="@{onOff}"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintLeft_toRightOf="@id/tv_friday"
+                app:layout_constraintLeft_toRightOf="@id/const_date"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_alarm_title" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_alarm_state"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:checked="@{onOff}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/const_date"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_alarm_title" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.cardview.widget.CardView>
 </layout>
