--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="kr.ryan.weatheralarm.viewModel.AlarmViewModel" />
@@ -17,71 +18,92 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:background="?attr/colorPrimary"
+        <View
+            android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.1"
+            android:background="@drawable/main_gradation"
+            app:layout_constraintHeight_percent="0.4"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/tv_remain_time"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/cyan_200"
             android:elevation="15dp"
             android:gravity="center"
             android:maxLines="1"
+            android:text="@{loopViewModel.remainTime}"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:text="@{loopViewModel.remainTime}"
+            app:layout_constraintBottom_toBottomOf="@id/top_layout"
             app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
-            app:layout_constraintBottom_toTopOf="@id/iv_more"
+            app:layout_constraintTop_toTopOf="@id/top_layout"
             app:layout_constraintWidth_percent="0.9" />
 
-        <ImageView
-            android:id="@+id/iv_add"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/add"
-            android:src="@drawable/ic_add"
-            android:onClick="@{() -> viewModel.onClickBtn(`ADD`)}"
+            android:layout_marginEnd="5dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintRight_toLeftOf="@id/iv_more"
-            app:layout_constraintTop_toBottomOf="@id/tv_remain_time" />
+            app:layout_constraintRight_toLeftOf="@id/card_more"
+            app:layout_constraintTop_toBottomOf="@id/tv_remain_time">
 
-        <ImageView
-            android:id="@+id/iv_more"
+            <ImageView
+                android:id="@+id/iv_add"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/add"
+                android:onClick="@{() -> viewModel.onClickBtn(`ADD`)}"
+                android:src="@drawable/ic_add" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_more"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/more"
-            android:src="@drawable/ic_more_vert"
-            android:onClick="@{() -> viewModel.onClickBtn(`MORE`)}"
+            android:layout_marginStart="5dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHeight_percent="0.1"
             app:layout_constraintRight_toRightOf="@id/tv_remain_time"
-            app:layout_constraintTop_toBottomOf="@id/tv_remain_time" />
+            app:layout_constraintTop_toBottomOf="@id/tv_remain_time">
+
+            <ImageView
+                android:id="@+id/iv_more"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/more"
+                android:onClick="@{() -> viewModel.onClickBtn(`MORE`)}"
+                android:src="@drawable/ic_more_vert" />
+
+        </androidx.cardview.widget.CardView>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_alarm"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="vertical"
             android:background="@color/white"
+            android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_more"
-            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintTop_toBottomOf="@id/top_layout"
             app:layout_constraintWidth_percent="0.9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
